Switch to Java 11 and bump various dependencies (#89)